# autocomplete

./: Cargo.toml  LICENSE  README.md
benches/: words_benchmark.rs
src/: lib.rs
tests/: test.rs
