[package]
name = "autocomplete"
description = "A Rust Auto-complete feature using Trie data structure"
repository = "https://github.com/rodic/autocomplete"
categories = ["algorithms", "data-structures"]
keywords = ["search", "autocompletion", "trie"]
authors = ["Aleksandar Rodić <aleks.rodic@pm.me>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = ["tests/","dictionary.txt", "benches/", ".github/", ".gitignore"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "words_benchmark"
harness = false
path = "benches/words_benchmark.rs"

[profile.bench]
debug = true